epaper-image-display-server/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "epaper-image-display-server"
spec:
  ports:
    - port: 8000
      name: "epaper-display"
  selector:
    app: "epaper-image-display-server"
